# proj-tpl

./: README.md
koa-project/: biome.json  package.json  pnpm-lock.yaml
koa-project/src/: app.ts
python-web-project/: makefile  readme.md  taskfile.yml
python-web-project/server/: pyproject.toml
python-web-project/server/deploy/: lark-monitor.service
python-web-project/server/server/: app.py
python-web-project/server/server/exception/: biz_error.py  error_handler.py
python-web-project/server/server/middleware/: response_wrapper.py
python-web-project/server/server/model/: readme.md
python-web-project/server/server/router/: dict.py  index.py  root.py  user.py
python-web-project/server/server/schema/: user.py
python-web-project/server/server/service/: user.py
python-web-project/server/server/static/: index.html
python-web-project/server/server/static/static/css/: index.0828fcf8.css
python-web-project/server/server/static/static/js/: index.9141c21a.js  lib-react.38b11c6c.js  lib-router.1c65d638.js
python-web-project/server/server/static/static/js/async/: 561.298db615.js  617.db5ed524.js  617.db5ed524.js.LICENSE.txt  842.72518e39.js  865.c0edaf3d.js  865.c0edaf3d.js.LICENSE.txt  939.6a92c4e4.js  lib-axios.9db9133e.js
python-web-project/server/server/utils/: biz_error.py  db_helper.py  dedup.py  dict_registry.py  lark_client.py  msg_parser.py  raw_msg.py
react-antd-project/: package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
react-antd-turbo-project/: package.json
react-full-project/: .gitignore  package.json  pnpm-lock.yaml  turbo.json
(+66 files in other folders)
