[project]
name = "lark-monitor-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "lark-oapi>=1.5.3",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
